examples/k8stest/kubernetes/test/https-test-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-https-basic
  namespace: edgion-test
spec:
  parentRefs:
    - name: gateway-443
      namespace: edgion-system
      sectionName: https

  hostnames:
    - "test.example.com"

  rules:
    - matches:
        - path:
            type: Exact
            value: /health
      backendRefs:
        - name: test-http
          port: 30001

    - matches:
        - path:
            type: PathPrefix
            value: /echo
      backendRefs:
        - name: test-http
          port: 30001

    - matches:
        - path:
            type: Exact
            value: /headers
      backendRefs:
        - name: test-http
          port: 30001

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-http
          port: 30001
